--- a/bin/FreeFactory-tabs.ui
+++ b/bin/FreeFactory-tabs.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1094</width>
-    <height>706</height>
+    <height>704</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -268,7 +268,9 @@
         </font>
        </property>
        <property name="toolTip">
-        <string>Notify Directory</string>
+        <string>Notify Directory. Not used for drag and drop conversions.
+This requires FreeFactory-service and is
+only used on Linux installations.</string>
        </property>
        <property name="placeholderText">
         <string>/video/dropbox</string>
@@ -290,7 +292,7 @@
         </font>
        </property>
        <property name="toolTip">
-        <string>Output Directory</string>
+        <string>Output Directory: Required</string>
        </property>
        <property name="placeholderText">
         <string>/video/output</string>
@@ -315,7 +317,7 @@
         </font>
        </property>
        <property name="toolTip">
-        <string>ffmpeg or ffmbc. What do you need here?</string>
+        <string>ffmpeg or ffmpeg.exe</string>
        </property>
        <property name="currentIndex">
         <number>0</number>
@@ -330,7 +332,7 @@
        </item>
        <item>
         <property name="text">
-         <string>ffmbc</string>
+         <string>ffmpeg.exe (supported soon)</string>
         </property>
        </item>
       </widget>
@@ -3268,7 +3270,7 @@ or Factory Testing</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>330</y>
+        <y>380</y>
         <width>601</width>
         <height>161</height>
        </rect>
@@ -3498,7 +3500,7 @@ or Factory Testing</string>
       <property name="geometry">
        <rect>
         <x>340</x>
-        <y>20</y>
+        <y>50</y>
         <width>271</width>
         <height>301</height>
        </rect>
@@ -3729,7 +3731,7 @@ or Factory Testing</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>20</y>
+        <y>50</y>
         <width>271</width>
         <height>301</height>
        </rect>
@@ -3867,6 +3869,22 @@ or Factory Testing</string>
        </property>
       </widget>
      </widget>
+     <widget class="QLabel" name="label_6">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>4</y>
+        <width>141</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>../Pics/FreeFactoryProgramLogo.png</pixmap>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tab_2">
      <attribute name="title">
@@ -3875,8 +3893,8 @@ or Factory Testing</string>
      <widget class="QGroupBox" name="groupBox">
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>20</y>
+        <x>10</x>
+        <y>50</y>
         <width>481</width>
         <height>71</height>
        </rect>
@@ -3935,10 +3953,10 @@ or Factory Testing</string>
       </property>
       <property name="geometry">
        <rect>
-        <x>30</x>
-        <y>100</y>
+        <x>10</x>
+        <y>130</y>
         <width>481</width>
-        <height>461</height>
+        <height>361</height>
        </rect>
       </property>
       <property name="font">
@@ -4111,19 +4129,6 @@ or Factory Testing</string>
         <string>Enable Factory Linking</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="PathtoFfmbcGlobal">
-       <property name="geometry">
-        <rect>
-         <x>70</x>
-         <y>360</y>
-         <width>401</width>
-         <height>22</height>
-        </rect>
-       </property>
-       <property name="placeholderText">
-        <string>/usr/local/bin</string>
-       </property>
-      </widget>
       <widget class="QLineEdit" name="PathtoFFmpegGlobal">
        <property name="geometry">
         <rect>
@@ -4135,25 +4140,6 @@ or Factory Testing</string>
        </property>
        <property name="placeholderText">
         <string>/usr/bin [Linux] or c:\\ffmpeg [windows]</string>
-       </property>
-      </widget>
-      <widget class="QLabel" name="l_PathtoFfmbc">
-       <property name="geometry">
-        <rect>
-         <x>10</x>
-         <y>360</y>
-         <width>41</width>
-         <height>22</height>
-        </rect>
-       </property>
-       <property name="font">
-        <font>
-         <pointsize>8</pointsize>
-         <bold>false</bold>
-        </font>
-       </property>
-       <property name="text">
-        <string>FFMBC</string>
        </property>
       </widget>
       <widget class="QLabel" name="l_PathtoFfmpeg">
@@ -4194,7 +4180,7 @@ or Factory Testing</string>
         <string>Factories</string>
        </property>
       </widget>
-      <widget class="QLineEdit" name="PathtoFactories">
+      <widget class="QLineEdit" name="PathtoFactoriesGlobal">
        <property name="geometry">
         <rect>
          <x>70</x>
@@ -4350,30 +4336,23 @@ or Factory Testing</string>
         <string>Folder Path</string>
        </property>
       </widget>
-      <widget class="QPushButton" name="pushNotifyFolderPath">
+      <widget class="QToolButton" name="NotifyFoldersPathsGlobal">
        <property name="geometry">
         <rect>
-         <x>415</x>
-         <y>150</y>
-         <width>41</width>
-         <height>31</height>
+         <x>418</x>
+         <y>153</y>
+         <width>29</width>
+         <height>23</height>
         </rect>
        </property>
-       <property name="toolTip">
-        <string>Browse</string>
-       </property>
        <property name="text">
-        <string/>
+        <string>...</string>
        </property>
-       <property name="icon">
-        <iconset>
-         <normaloff>../Pics/Folder-Open1-32x32.gif</normaloff>../Pics/Folder-Open1-32x32.gif</iconset>
+       <property name="autoRaise">
+        <bool>false</bool>
        </property>
-       <property name="iconSize">
-        <size>
-         <width>32</width>
-         <height>34</height>
-        </size>
+       <property name="arrowType">
+        <enum>Qt::ArrowType::UpArrow</enum>
        </property>
       </widget>
      </widget>
@@ -5038,6 +5017,22 @@ or Factory Testing</string>
        </property>
       </widget>
      </widget>
+     <widget class="QLabel" name="label_5">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>4</y>
+        <width>141</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>../Pics/FreeFactoryProgramLogo.png</pixmap>
+      </property>
+     </widget>
     </widget>
     <widget class="QWidget" name="tabConversionQueue">
      <attribute name="title">
@@ -5047,9 +5042,9 @@ or Factory Testing</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>10</y>
+        <y>70</y>
         <width>1021</width>
-        <height>521</height>
+        <height>421</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -5064,7 +5059,7 @@ or Factory Testing</string>
          <x>120</x>
          <y>30</y>
          <width>891</width>
-         <height>431</height>
+         <height>341</height>
         </rect>
        </property>
        <property name="columnCount">
@@ -5074,25 +5069,12 @@ or Factory Testing</string>
        <column/>
        <column/>
       </widget>
-      <widget class="QLabel" name="queueSummaryLabel">
-       <property name="geometry">
-        <rect>
-         <x>120</x>
-         <y>10</y>
-         <width>891</width>
-         <height>16</height>
-        </rect>
-       </property>
-       <property name="text">
-        <string>Summery</string>
-       </property>
-      </widget>
       <widget class="QProgressBar" name="conversionProgressBar">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>490</y>
-         <width>1001</width>
+         <x>120</x>
+         <y>380</y>
+         <width>891</width>
          <height>23</height>
         </rect>
        </property>
@@ -5155,8 +5137,8 @@ or Factory Testing</string>
       <widget class="QLabel" name="l_queueProgressBar">
        <property name="geometry">
         <rect>
-         <x>10</x>
-         <y>470</y>
+         <x>50</x>
+         <y>384</y>
          <width>62</width>
          <height>16</height>
         </rect>
@@ -5176,7 +5158,7 @@ or Factory Testing</string>
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>540</y>
+        <y>500</y>
         <width>1021</width>
         <height>101</height>
        </rect>
@@ -5190,6 +5172,370 @@ or Factory Testing</string>
       </property>
       <property name="placeholderText">
        <string>Drop Media Files Here</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_4">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>4</y>
+        <width>141</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>../Pics/FreeFactoryProgramLogo.png</pixmap>
+      </property>
+     </widget>
+     <widget class="QLabel" name="queueSummaryLabel">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>50</y>
+        <width>891</width>
+        <height>16</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="text">
+       <string>FreeFactory File Queue</string>
+      </property>
+     </widget>
+    </widget>
+    <widget class="QWidget" name="tab_3">
+     <attribute name="title">
+      <string>FFmpeg Help</string>
+     </attribute>
+     <widget class="QGroupBox" name="groupBox_3">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>50</y>
+        <width>701</width>
+        <height>381</height>
+       </rect>
+      </property>
+      <property name="font">
+       <font>
+        <pointsize>8</pointsize>
+        <bold>true</bold>
+       </font>
+      </property>
+      <property name="title">
+       <string>FFMpeg Help Dialogs</string>
+      </property>
+      <widget class="QPushButton" name="helpVCodecsAll">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>50</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Video Codecs All</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="helpACodecsAll">
+       <property name="geometry">
+        <rect>
+         <x>320</x>
+         <y>50</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Audio Codecs All</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="helpMuxers">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>140</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Muxers</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="helpAFilters">
+       <property name="geometry">
+        <rect>
+         <x>320</x>
+         <y>110</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Audio Filters</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="helpAllHelp">
+       <property name="geometry">
+        <rect>
+         <x>320</x>
+         <y>140</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Show All Help</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="helpVFilters">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>110</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Video Filters</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_8">
+       <property name="geometry">
+        <rect>
+         <x>170</x>
+         <y>30</y>
+         <width>57</width>
+         <height>14</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Filters</string>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_9">
+       <property name="geometry">
+        <rect>
+         <x>490</x>
+         <y>30</y>
+         <width>57</width>
+         <height>14</height>
+        </rect>
+       </property>
+       <property name="text">
+        <string>Filters</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="helpACodecsFiltered">
+       <property name="geometry">
+        <rect>
+         <x>320</x>
+         <y>80</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Audio Codec Info</string>
+       </property>
+      </widget>
+      <widget class="QPushButton" name="helpVCodecsFiltered">
+       <property name="geometry">
+        <rect>
+         <x>10</x>
+         <y>80</y>
+         <width>121</width>
+         <height>21</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Video Codec Info</string>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="helpACodecsFilter">
+       <property name="geometry">
+        <rect>
+         <x>450</x>
+         <y>80</y>
+         <width>113</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+      </widget>
+      <widget class="QLineEdit" name="helpVCodecsFilter">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>80</y>
+         <width>113</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+      </widget>
+      <widget class="QPlainTextEdit" name="plainTextEdit">
+       <property name="geometry">
+        <rect>
+         <x>20</x>
+         <y>230</y>
+         <width>661</width>
+         <height>121</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::Shape::NoFrame</enum>
+       </property>
+       <property name="documentTitle">
+        <string/>
+       </property>
+       <property name="undoRedoEnabled">
+        <bool>false</bool>
+       </property>
+       <property name="readOnly">
+        <bool>true</bool>
+       </property>
+       <property name="plainText">
+        <string>Note: These help dialogs are read on the fly from your existing ffmpeg installation. They are not internal to FreeFactory.
+
+Why is this here, you may ask. Well it's here to make it easier to find options that are not included within the GUI. As FFmpeg has hundreds of options, it's simply not possible to include each and every one. So this is here to allow you to easily find advanced options that you may use within the Manual Options dialog on the Factory Builder tab. This is mostly used as a built-in reference.
+
+The Filter boxes allow you to filter the help for specific codecs, muxers, filters etc. It shows you the options available for the specific item you want to use.</string>
+       </property>
+       <property name="backgroundVisible">
+        <bool>false</bool>
+       </property>
+      </widget>
+      <widget class="QSpinBox" name="spinBox">
+       <property name="geometry">
+        <rect>
+         <x>140</x>
+         <y>170</y>
+         <width>61</width>
+         <height>22</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="minimum">
+        <number>10</number>
+       </property>
+       <property name="maximum">
+        <number>18</number>
+       </property>
+      </widget>
+      <widget class="QLabel" name="label_7">
+       <property name="geometry">
+        <rect>
+         <x>13</x>
+         <y>173</y>
+         <width>121</width>
+         <height>16</height>
+        </rect>
+       </property>
+       <property name="font">
+        <font>
+         <pointsize>8</pointsize>
+         <bold>false</bold>
+        </font>
+       </property>
+       <property name="text">
+        <string>Help Window Font Size</string>
+       </property>
+      </widget>
+     </widget>
+     <widget class="QLabel" name="label_3">
+      <property name="geometry">
+       <rect>
+        <x>10</x>
+        <y>4</y>
+        <width>141</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+      <property name="pixmap">
+       <pixmap>../Pics/FreeFactoryProgramLogo.png</pixmap>
       </property>
      </widget>
     </widget>
@@ -5247,7 +5593,7 @@ or Factory Testing</string>
  <resources/>
  <connections/>
  <buttongroups>
-  <buttongroup name="RunFromButtonGroup"/>
   <buttongroup name="ActionButtonGroup"/>
+  <buttongroup name="RunFromButtonGroup"/>
  </buttongroups>
 </ui>
